--- a/config.properties
+++ b/config.properties
@@ -35,8 +35,8 @@ mail.smtp.host=smtp.gmail.com
 mail.smtp.starttls.enable=true
 mail.smtp.ssl.protocols=TLSv1.2
 #take the app-password if using google email
-mail.username=ngoduyhoaname2002@gmail.com
-mail.password=wppxrsccsxghfcee
+mail.username=[your email]
+mail.password=[your email's password]
 
 
 # ===============================
