fix product detail

--- a/config.properties
+++ b/config.properties
@@ -35,8 +35,8 @@ mail.smtp.host=smtp.gmail.com
 mail.smtp.starttls.enable=true
 mail.smtp.ssl.protocols=TLSv1.2
 #take the app-password if using google email
-mail.username=[your email]
-mail.password=[your email's password]
+mail.username=ngoduyhoaname2002@gmail.com
+mail.password=whunzmmdzgahvzfp
 
 
 # ===============================
@@ -47,3 +47,4 @@ mssql.username=sa
 mssql.password=songlong
 mssql.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 mssql.url=jdbc:sqlserver://localhost:1433;databaseName=DB_ELECTRON;trustServerCertificate=true;
+
